--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,15 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-// Variables
-@import 'variables';
+// Variables, Commons, Mixins
+@import 'partials/variables';
+@import 'partials/commons';
+@import 'partials/mixins';
+
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Sections
+@import 'partials/header';
+@import 'partials/index';
