Aggiunta piccola modifica view index admin

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,3 +13,9 @@
 // Sections
 @import 'partials/header';
 @import 'partials/index';
+
+// section admin/posts
+@import 'partials/admin/posts/index';
+//@import 'partials/index';
+//@import 'partials/index';
+//@import 'partials/index';
